--- a/kube-configs/deployment.yml
+++ b/kube-configs/deployment.yml
@@ -1,3 +1,4 @@
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ip-app-deployment
@@ -16,12 +17,10 @@ spec:
           image: harshajain/ip_app:latest
           ports:
             - containerPort: 8080
-      VolumeMounts:
-        -name: pvc-vol
-        mountPath: /app/pvc-volumn
-      Volumes:
-        -name: pvc-vol
-        persistentVolumeClaim:
-          clainName:
-
-
+      volumeMounts:
+        - name: pvc-vol
+          mountPath: /app/pvc-vol
+      volumes:
+        - name: pvc-vol
+          persistentVolumeClaim:
+            claimName: my-pvc
